--- a/components/Hero/index.css
+++ b/components/Hero/index.css
@@ -4,16 +4,45 @@
     /* display: flex; */
     flex-wrap: wrap;
     justify-items: end;
+    border-radius: 30px;
     /* gap: 30px; */
 }
 .heroSVG1{
     position: absolute;
     top: 0rem;
 }
+
+.heroRightCont #image-1 {
+    width: 20vw;
+    min-width: 150px;
+    max-height: 180px;
+    text-align: end;
+    display: inline;
+    margin-top: -55px;
+    /* transform: translate(35vw, -25vw); */
+    margin-left: auto;
+    border-radius: 30px;
+    box-shadow: 6px -4px 0px 2px rgb(245 158 11);
+}
+
 .heroRightCont #image-2 {
 
     border-radius: 30px;
     box-shadow: 4px 4px 0px 2px rgb(245 158 11);
+}
+.heroRightCont #image-3 {
+
+    /* width: 20vw; */
+    min-width: 150px;
+    /* max-height: 150px; */
+    /* text-align: end; */
+    /* display: inline; */
+    /* margin-top: -55px;/ */
+    /* transform: translate(35vw, -25vw); */
+    display: inline;
+    margin-left: auto;
+    border-radius: 30px;
+    box-shadow: 4px -2px 0px 2px rgb(245 158 11);
 }
 .heroRightCont .dottedSVG{
     color: transparent;
@@ -21,16 +50,46 @@
     width: 6vw;
     position: absolute;
 }
+.orangeBubble{
+    position: absolute;
+    bottom: 0rem;
+    right: 1rem;
+    scale: -1;
+    rotate: 236deg;
+}
 
-.heroRightCont #image-1 {
-    width: 20vw;
-    min-width: 150px;
-    max-height: 150px;
+
+@media (width < 500px){
+    .heroRightCont #image-1 {
+        width: 20vw;
+        min-width: 150px;
+        max-height: 150px;
+        text-align: end;
+        display: inline;
+        margin: 10px;
+    }
+.heroRightCont #image-2 {
+    width: 84vw;
+    /* min-width: 0px; */
+    /* min-width: 100%; */
+    max-width: 100vw;
+    height: 190px;
+    /* max-height: 250px; */
     text-align: end;
-    display: inline;
-    margin-top: -55px;
-    /* transform: translate(35vw, -25vw); */
-    margin-left: auto;
-    border-radius: 30px;
-    box-shadow: 4px -4px 0px 2px rgb(245 158 11);
+}
+.heroRightCont {
+    /* background-color: rgb(245 158 11 / 10%); */
+    padding: 10px 5px;
+}
+.heroRightCont #image-3 {
+
+    /* width: 20vw; */
+    /* min-width: 150px; */
+    /* height: 7em; */
+    /* max-height: 250px; */
+    /* text-align: end; */
+    /* display: inline; */
+    margin: -2px;
+}
+
 }
