--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@
 @layer base {
   body {
     font-family: "Inter", sans-serif;
+    
   }
 }
 
@@ -44,9 +45,24 @@
   }
 }
 
+section, header{
+  background-color: #faf8f4 !important;
+}
 
+hr{
+  content: '';
+  background-color: rgb(245 158 11 ) !important;
+  height: 2px;
+  position: absolute;
+  width: 90%;
+  left: 5%;
+  text-align: center;
+  margin: auto;
+
+}
 .primaryColor{
   color: rgb(245 158 11 ) !important;
+  border-color: rgb(245 158 11 ) !important;
 }
 .hover-primaryColor:hover{
   color: rgb(245 158 11 ) !important;
